--- a/AsistenciaAutomatica/app/src/main/AndroidManifest.xml
+++ b/AsistenciaAutomatica/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Asistente"></activity>
+        <activity android:name=".Lista_Asistencia" />
+        <activity android:name=".Asistente" />
         <activity android:name=".FormularioCurso" />
         <activity android:name=".Tutor" />
         <activity android:name=".Perfil" />
