--- a/AsistenciaAutomatica/build.gradle
+++ b/AsistenciaAutomatica/build.gradle
@@ -6,10 +6,11 @@ buildscript {
         jcenter()
         mavenCentral()
         maven { url "https://maven.google.com" }
+        maven { url 'https://jitpack.io' }
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'com.google.gms:google-services:4.3.3'
         
         // NOTE: Do not place your application dependencies here; they belong
@@ -23,6 +24,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url "https://maven.google.com" }
+        maven { url 'https://jitpack.io' }
         
     }
 }
